--- a/FicherosTFG/00introduccion.tex
+++ b/FicherosTFG/00introduccion.tex
@@ -6,7 +6,7 @@ Los grandes avances en la computación y la tecnología en los últimos años, han l
 
 En la actualidad, los métodos numéricos nos brindan la oportunidad de aproximar de forma cada vez más precisa la solución de los modelos, en ocasiones en las que antes teníamos que conformarnos con soluciones parciales o marcos muy específicos.\\
 
-En este trabajo nos centraremos en la EDP de onda. Esta fue modelada por Jean le Rond d\textquotesingle Alembert en 1752, obteniendo soluciones en forma de ondas viajeras, de manera similar a como lo realizaremos en nuestro estudio, siguiendo \citep{MartinDomingo}. Esto provocó que pocos años después, tanto D.Bernoulli, como  Leonhard Euler se interesasen en el estudio de las ondas acústicas. Este último utilizó lo que hoy conocemos como series de Fourier, para obtener una solución de la ecuación de onda. Más tarde, se descubriría que cualquier solución de d \textquotesingle Alembert, se podría construir como suma de soluciones de tipo Euler y viceversa. El siguiente artículo retrata algunas soluciones posibles \citep{AcercaDe}. \\
+En este trabajo nos centraremos en la EDP de onda. Esta fue modelada por Jean le Rond d\textquotesingle Alembert en 1752, obteniendo soluciones de tipo onda viajeras, de manera similar a como lo realizaremos en nuestro estudio, siguiendo \citep{strauss}. Esto provocó que pocos años después, tanto D.Bernoulli, como  Leonhard Euler se interesasen en el estudio de las ondas acústicas. Este último utilizó lo que hoy conocemos como series de Fourier, para obtener una solución de la ecuación de onda. Más tarde, se descubriría que cualquier solución de d \textquotesingle Alembert, se podría construir como suma de soluciones de tipo Euler y viceversa. El siguiente artículo retrata algunas soluciones posibles \citep{AcercaDe}. \\
 
   
 A partir de entonces, se han realizado un gran despliegue de modelos relacionados con las ecuaciones de onda describir diversos fenómenos observables en la realidad. Podríamos destacar su uso en los campos de la sismica \citep{Seismic}, la acústica \citep{acoustics} y la óptica \citep{optics}, usando asiduamente los métodos numéricos para la aproximación de soluciones.\\
