--- a/FicherosTFG/06conclusiones2.tex
+++ b/FicherosTFG/06conclusiones2.tex
@@ -201,10 +201,9 @@ for i in range(1, m):
 
 # Creamos la matriz wl la solución viajera hacia la izquierda y wr hacia la derecha
 
-wl = np.empty((m + 1, n + 1), float) #Solo para mu=1
-wr = np.empty((m + 1, n + 1), float) #Solo para mu=1
+wl = np.empty((m + 1, n + 1), float) 
+wr = np.empty((m + 1, n + 1), float) 
 
-#Inicializamos la solución
 for i in range(0, m+1):
 	for j in range(0,n+1):
 		wl[i,j]= (1/2)*f([x[i]+c*t[j]])[0]+(1/(2*c))*quad(g, 0, x[i]+c*t[j])[0]
