--- a/FicherosTFG/bibliografia.bib
+++ b/FicherosTFG/bibliografia.bib
@@ -29,37 +29,25 @@ author={Juan Carlos Solares Carre{\~n}o and Rosalba Mendoza Su{\'a}res},
 year={2012}, 
 month={jul.}}
 
-@book{MartinDomingo,
-           title = {Apuntes de vibraciones y ondas},
-       publisher = {El autor},
-            year = {2020},
-           month = {Septiembre},
-         address = {Madrid},
-          author = {Mart{\'i}n Domingo, Agust{\'i}n},
-        keywords = {F{\'i}sica, Mec{\'a}nica, Ondas, Vibraciones},
-             url = {https://oa.upm.es/63585/},
-        abstract = {Las primeras versiones de estos apuntes de vibraciones y ondas comenzaron a escribirse para la asignatura "F{\'i}sica de las Construcciones", del plan 1996 de Arquitectura y han sido posteriormente ampliadas en muy distintos aspectos.}
-
-
-
 
 @inproceedings{Camarena2004LaTD,
   title={La transferencia del conocimiento: ecuaciones diferenciales parciales hacia una cuerda que vibra},
   author={Patricia Camarena},
- journal={Acta Latinoamericana de Matem{\'a}tica Educativa}, 
+ publisher={Acta Latinoamericana de Matem{\'a}tica Educativa}, 
 pages = {156-162},
   year={2004}
 }
 
 @book{Wazwaz,
-author = {Wazwaz, Abdul-Majid},
-year = {2009},
-month = {01},
-pages = {},
-title = {Partial Differential Equations and Solitary Waves Theory},
-isbn = {978-3-642-00250-2},
-journal = {Partial Differential Equations and Solitary Waves Theory. Series: Nonlinear Physical Science, ISBN: 978-3-642-00250-2. Springer Berlin Heidelberg (Berlin, Heidelberg), Edited by Abdul-Majid Wazwaz},
-doi = {10.1007/978-3-642-00251-9}
+  title={Partial Differential Equations and Solitary Waves Theory},
+  author={Wazwaz, A.M.},
+  isbn={9783642002502},
+  lccn={2009920462},
+  series={Nonlinear Physical Science},
+  url={https://books.google.es/books?id=dd6qDAEACAAJ},
+  year={2009},
+  publisher={Springer Berlin Heidelberg}
+}
 }
 
 @book{AnIntroduction,
@@ -107,8 +95,6 @@ year={2004},
 author = {Russell, David L.},
 title = {Controllability and Stabilizability Theory for Linear Partial Differential Equations: Recent Progress and Open Questions},
 journal = {SIAM Review},
-volume = {20},
-number = {4},
 pages = {639-739},
 year = {1978},
 doi = {10.1137/1020095},
@@ -223,7 +209,6 @@ author={Ern,Alexandre and Guermond,Jean-Luc},
 year={2004},
 title={Theory and practice of finite elements},
 publisher={Springer},
-address={New York},
 volume={159},
 keywords={Ecuaciones en derivadas parciales; Método de los elementos finitos},
 isbn={0387205748;9780387205748;},
@@ -234,7 +219,7 @@ language={English},
 author={Quarteroni,Alfio and Hou,Tom and Le Bris,Claude},
 year={2009},
 title={Numerical Models Differential Problems},
-publisher={Springer Milan},
+publisher={Springer},
 volume={2},
 isbn={2037-5255},
 language={English},
@@ -296,13 +281,19 @@ isbn={9780470900567;0470900563;9781118548448;1118548442;},
 }
 
 @book{universitaria,
-  title={F{\'\i}sica universitaria 01},
-  author={Young, H.D. and Freedman, R.A. and Sears, F.W. and Flores, V.A.F. and Ford, A.L. and Zemansky, M.W.},
-  number={v. 1},
-  isbn={9786074422887},
-  series={F{\'\i}sica universitaria},
-  url={https://books.google.es/books?id=qtsXYAAACAAJ},
-  publisher={Addison-Wesley; Pearson Educaci{\'o}n}
+author={Young,Hugh D. and Freedman,Roger A.},
+
+year={2009},
+title={Sears - Zemansky F{\'i}sica universitaria con f{\'i}sica moderna},
+
+publisher={Prentice Hall},
+
+keywords={Física},
+
+isbn={9786074423044;6074423040;},
+
+language={Spanish},
+
 }
 
 @comment{jabref-meta: selector_publisher:}
