--- a/FicherosTFG/04SegundaParte.tex
+++ b/FicherosTFG/04SegundaParte.tex
@@ -30,14 +30,14 @@ Si tomamos como ejemplo una cuerda cuya posición inicial sea $f(x)= sin(2\pi x)$
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{2Seno1.png}
-		\caption{Posición inicial.\\ $\ $\\}
+		\caption{Posición inicial, de la cuerda, los puntos rojos se correspoden con los nodos.}
 		\label{fig:2Seno1}
 	\end{minipage}
 	\hfill
 	\begin{minipage}[b]{0.45\textwidth}
 		\centering
 		\includegraphics[width=\textwidth]{2Seno2.png}
-		\caption{Imagen realizada con $m=100$, $h=\frac{1}{100}$, $\mu=1$ y $k=\frac{1}{44000}$}
+		\caption{Imagen realizada con $m=100$, $h=\frac{1}{100}$, $\ \ \ \mu=1$ y $k=\frac{1}{44000}$.\\}
 		\label{fig:2Seno2}
 	\end{minipage}
 \end{figure}
@@ -45,32 +45,32 @@ Si tomamos como ejemplo una cuerda cuya posición inicial sea $f(x)= sin(2\pi x)$
 \newpage
 Al encontrarnos en una onda estacionaria, $\lambda$  dependerá del largo de la cuerda, $L$, y del número de nodos que se presenten en la misma, $N$, de la siguiente forma $\lambda=\fra{2L}{N-1}$. Eligiendo $L=1$.\\
 
-\begin{wrapfigure}[6]{r}{0.55\textwidth}
-	\vspace{-2.2 cm}
+Luego, si queremos obtener $\textbf{f}=440Hz$, frecuencia del La central, teniendo en cuenta $\lambda=\frac{2}{2}=1$, tendremos que elegir $c=\lambda \textbf{f}=1*440 = 440$.
+
+\begin{wrapfigure}[8]{r}{0.55\textwidth}
+	\vspace{-1.4 cm}
 	\includegraphics[width=0.55\textwidth]{2Seno4.png}
 	\caption{$sin(2\pi x)$ en $x=0.25$ Archivo figura5-37.wav}
 	\label{fig:2Seno4}
 	
 \end{wrapfigure}
-\vspace{1.2 cm}
-Luego, si queremos obtener $\ \ \ \  \textbf{f}=440Hz$, frecuencia del La central, ya que  $\lambda=\frac{2}{2}=1$, tendremos que elegir $c=\lambda \textbf{f}=1*440 = 440$. Con estos parámetros, para el punto de máxima amplitud $x=0.25$\\
-
-
+\vspace{1 cm}
+En esta imagen se representa el movimiento de la onda respecto al tiempo,  en un punto espacial fijado, en este caso $x=0.25$. La frecuencia del sonido será el número de oscilaciones, o ciclos en un segundo, por lo que se puede comprobar gráficamente que es de $440Hz$.\\
 
 
 \begin{wrapfigure}[3]{r}{0.55\textwidth}
-	\vspace{-2.7cm}
+	\vspace{-2.9cm}
 	\includegraphics[width=0.55\textwidth]{SenoPuntos.png}
 	\caption{Número de nodos}
 	\label{fig:SenoPuntos}
 	
 \end{wrapfigure}
 
-\vspace{3.2 cm}
+\vspace{2.6 cm}
 Si utilizásemos de igual forma $c=440$ para la posición inicial $f(x)= sin(\pi x)$,
 
-\vspace{3cm}
-Ahora tendremos, $N=2$ y  $\lambda=\frac{2*L}{N-1}=2$, se sigue $\text{f}= \fra{440}{2}=220Hz$, por lo que el número de oscilaciones por segundo se reducirán a la mitad, siendo un La de 3ª octava. Lo ilustramos con la siguiente imagen, eligiendo los puntos adecuados, $x=0.5$ y $x=0.25$, para seno de $\pi x$, y seno de $2\pi x$. Observamos claramente que el número de oscilaciones se reduce a la mitad.
+\vspace{2.8cm}
+Ahora tendremos, $N=2$ y  $\lambda=\frac{2*L}{N-1}=2$, se sigue $\text{f}= \fra{440}{2}=220Hz$, por lo que el número de oscilaciones por segundo se reducirán a la mitad, siendo un La de 3ª octava. Lo ilustramos con la siguiente imagen, eligiendo los puntos adecuados, $x=0.5$ y $x=0.25$, para seno de $\pi x$, y seno de $2\pi x$, respectivamente. Observamos claramente que el número de oscilaciones se reduce a la mitad.
 
 \begin{figure}[!ht]
 	\centering
